### 4.0.84 - bug-fix: align widget left/right mobile/desktop

--- a/src/app/components/launcher-button/launcher-button.component.scss
+++ b/src/app/components/launcher-button/launcher-button.component.scss
@@ -38,5 +38,12 @@
 @media (max-width: 451px) {
     #c21-launcher-button {
         //display: none;
+        &.c21-align-right {
+            right: 0;
+        }
+        &.c21-align-left {
+            left: 0;
+        }
+        
     } 
 }
