--- a/src/iframe-style.css
+++ b/src/iframe-style.css
@@ -23,6 +23,8 @@
     display: block;
     position: fixed;
 }
+
+
 #tiledesk-container.closed #tiledeskdiv {
     width: 100px; /* 100X100 */
     height: 100px;
@@ -124,15 +126,20 @@
             width: 100%;
             height: 100%;
             /* left: auto; */
-            left: 0px!important;
-            right: 0px!important;
+            /* left: 0px!important;
+            right: 0px!important; */
             top: auto;
             bottom: 0px!important;
             max-width: 100%;
             max-height: 100%;
             min-width: 320px;
         }
-
+        #tiledeskdiv.align-right { 
+            right: 0!important;
+        }
+        #tiledeskdiv.align-left { 
+            left: 0!important;
+        }
         #tiledesk-container.closed #tiledeskdiv.callout {
             min-width: auto;
             max-width: 100%;
